monitoring/nginx_monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113" 
        prometheus.io/scrape_interval: "10s"
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
      - name: nginx-prometheus-exporter
        image: nginx/nginx-prometheus-exporter:latest
        ports:
        - containerPort: 9113
        args:
          - "-nginx.scrape-uri=http://localhost:8080/stub_status"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  type: ClusterIP   # Explicitly specify service type
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
